modified:   static/activity3style.css 	modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,14 @@
     </header>
 
     <main>
-        <p style="text-align: center;"> Hi! This is my first time using Flask!</p>
+        <p style="text-align: center;"> Hello! My name is Amir and this is my first time using Flask! </p>
         <div class="image1">
         <img src="{{ url_for('static', filename = 'smile.png') }}">
         </div>
     </main>
 
     <footer>
-        <p style="text-align: center;">&copy; 2025 Flask App</p>
+        <p style="text-align: center;">&copy; 2025 Flask App </p>
     </footer>
 </body>
 </html>
