--- a/static/activity3style.css
+++ b/static/activity3style.css
@@ -2,8 +2,18 @@ body{
     background-color: skyblue;
 }
 
+h1{
+    font-family:cursive;
+}
+
 p{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: large;
+    font-size: 40px;
     text-align: center;
+}
+.image1{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
 }
