new file:   templates/base.html 	modified:   templates/index.html 	deleted:    templates/index2.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> My First Flask App </title>
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'activity3style.css') }}">
+    <meta charset="UTF-8" />
+    <title> My First Flask App</title>
 </head>
 <body>
-    <header>
-        <h1 style="text-align: center;"> My Flask Application </h1>
-    </header>
+    {% extends 'base.html' %}
 
-    <main>
-        <p style="text-align: center;"> Hello! My name is Amir and this is my first time using Flask! </p>
-        <div class="image1">
-        <img src="{{ url_for('static', filename = 'smile.png') }}">
-        </div>
-    </main>
+{% block title %}Home - Flask App{% endblock %}
 
-    <footer>
-        <p style="text-align: center;">&copy; 2025 Flask App </p>
-    </footer>
+{% block content %}
+    <h2>Hello, World!</h2>
+{% endblock %}
 </body>
 </html>
